Better getMap method and compile fixes